--- a/client/views/login.html
+++ b/client/views/login.html
@@ -14,6 +14,7 @@
             <input type="text" name="password" placeholder="password">
             <button type="submit">Login</button>
         </form>
+        <script src="../script/Pagescript/login.js"></script>
     </body>
 
 </html>
