--- a/client/views/login.html
+++ b/client/views/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link href="../content/Style.css" rel="stylesheet" />
+        <link href="../style/Style.css" rel="stylesheet" />
         <script src="../script/jquery-3.4.1.min.js"></script>
         <title>Login</title>
     </head>
