--- a/client/views/register.html
+++ b/client/views/register.html
@@ -9,10 +9,12 @@
         <title>Login</title>
     </head>
     <body>
-        <form action="http://localhost:3003/users/login"method="POST">
+        <form action="http://localhost:3003/users"method="POST">
             <input type="text"name="email"placeholder="email">
             <input type="text" name="password" placeholder="password">
-            <button type="submit">Login</button>
+            <input type="text" name="name" placeholder="Your Name">
+            <input type="text" name="phoneNumber" placeholder="Phone Number">
+            <button type="submit">Register</button>
         </form>
     </body>
 
