added href to login

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -12,7 +12,8 @@
         <form action="http://localhost:3003/users/login"method="POST">
             <input type="text"name="email"placeholder="email">
             <input type="text" name="password" placeholder="password">
-            <button type="submit">Login</button>
+            <button type="submit"><a href="./register.html">Login</a></button>
+            
         </form>
     </body>
 
